--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <title>IZ* Gone - Archiving IZ* One</title>
 </head>
 <body>
-<center><img src="https://upload.wikimedia.org/wikipedia/commons/6/63/IZONE_Logo.png" alt="izone_logo"></center>
+<center><img src="https://upload.wikimedia.org/wikipedia/commons/6/63/IZONE_Logo.png" width="400" height="283" alt="izone_logo"></center>
 <center><H2>Welcome to IZ* gOne - Archiving IZ* One</H2></center>
 
 <ul>
