--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 <center><H2>Welcome to IZ* gOne - Archiving IZ* One</H2></center>
 
 <ul>
-<li><a href="http://anonfiles.com/">IZ* One Homepage Archive (latest) Download<a>
+<li><a href="https://anonfiles.com/h6UbY5S9s2/izhome-latest.tar_xz">IZ* One Homepage Archive (latest) Download</a>
+  <li><a href="https://github.com/HexagonWin/iz-gone">Github Project</a>
   <li><p>More coming soon...</p>
   </ul>
 
