--- a/index.html
+++ b/index.html
@@ -1,19 +1,23 @@
 <head>
   <title>IZ* Gone - Archiving IZ* One</title>
 </head>
+
 <body>
+
 <center><img src="https://upload.wikimedia.org/wikipedia/commons/6/63/IZONE_Logo.png" width="400" height="283" alt="izone_logo"></center>
 <center><H2>Welcome to IZ* gOne - Archiving IZ* One</H2></center>
 
 <ul>
-<li><a href="https://anonfiles.com/h6UbY5S9s2/izhome-latest.tar_xz">IZ* One Homepage Archive (latest) Download</a>
+  <li><a href="https://anonfiles.com/h6UbY5S9s2/izhome-latest.tar_xz">IZ* One Homepage Archive (latest) Download</a>
   <li><a href="https://github.com/HexagonWin/iz-gone">Github Project</a>
   <li><p>More coming soon...</p>
-  </ul>
+</ul>
 
   
 <hr>
 <p>Updated 2021/03/15
-  <p>Maintained by HexagonWin. If you got more datas, please DM me in Reddit u/HexagonWin! I will gladly add it to the list.</p>
-  <p>All datas are owned by IZ* One, MNet, and CJ Entertainment, etc.</p>
-  </body>
+<p>Maintained by HexagonWin. If you got more datas, please DM me in Reddit u/HexagonWin! I will gladly add it to the list.</p>
+<p>All datas are owned by IZ* One, MNet, and CJ Entertainment, etc.</p>
+
+</body>
+</html>
