--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 <ul>
   <li><a href="https://anonfiles.com/h6UbY5S9s2/izhome-latest.tar_xz">IZ* One Homepage Archive (latest) Download</a>
   <li><a href="https://github.com/HexagonWin/iz-gone">Github Project</a>
+  <li><a href="https://anonfiles.com/ZcDcH7Tas3/official_izone-1273572521741172736_20200618_200525_-1371004580041949188_20210314_164538_-media_zip">IZ* One Twitter Media Contents Download</a>
+  <li><a href="/cafe/">IZ* One Daum Cafe Main Page Saved</a>
   <li><p>More coming soon...</p>
 </ul>
 
