--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <li><a href="https://anonfiles.com/h6UbY5S9s2/izhome-latest.tar_xz">IZ* One Homepage Archive (latest) Download</a>
   <li><a href="https://github.com/HexagonWin/iz-gone">Github Project</a>
   <li><a href="https://anonfiles.com/ZcDcH7Tas3/official_izone-1273572521741172736_20200618_200525_-1371004580041949188_20210314_164538_-media_zip">IZ* One Twitter Media Contents Download</a>
+  <li><a href="https://www.reddit.com/r/iZone/comments/m4trbk/lets_talk_about_backing_up_the_content/gqw4ok3?utm_source=share&utm_medium=web2x&context=3">Some Google Spreadsheet with lot of IZ* One contents</a>
   <li><p>More coming soon...</p>
 </ul>
 
