get rid of that crappy logo

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <body>
 
-<center><img src="Untitled.png" width="400" height="283" alt="izone_logo"></center>
+<center><img src="https://upload.wikimedia.org/wikipedia/commons/6/63/IZONE_Logo.png" width="400" height="283" alt="izone_logo"></center>
 <center><H2>Welcome to IZ* gOne - Archiving IZ* One</H2></center>
 <center><H4>Please visit <a href="https://old.reddit.com/r/iZone/comments/m4trbk/lets_talk_about_backing_up_the_content/">this</a> thread in <a href="http://old.reddit.com/r/izone">r/izone</a>. it contains a lot of things.</H4></center>
 
