--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
   
 <hr>
-<p>Updated 2021/03/15, Korean Time 18:52</p>
+<p>Updated 2022/11/05, 22:12 KST</p>
 <p>Maintained by HexagonWin. If you got more datas, please DM me in Reddit u/HexagonWin! I will gladly add it to the list.</p>
 <p>All datas are owned by IZ* One, MNet, and CJ Entertainment, etc.</p>
 
