--- a/index.html
+++ b/index.html
@@ -6,22 +6,25 @@
 
 <center><img src="https://upload.wikimedia.org/wikipedia/commons/6/63/IZONE_Logo.png" width="400" height="283" alt="izone_logo"></center>
 <center><H2>Welcome to IZ* gOne - Archiving IZ* One</H2></center>
-<center><H4>Please visit <a href="https://old.reddit.com/r/iZone/comments/m4trbk/lets_talk_about_backing_up_the_content/">this</a> thread in <a href="http://old.reddit.com/r/izone">r/izone</a>. it contains a lot of things.</H4></center>
+<center><H4>Please visit <a href="https://old.reddit.com/r/iZone/comments/m4trbk/lets_talk_about_backing_up_the_content/">this</a> thread in <a href="http://teddit.net/r/izone">r/izone</a>. Has some useful links.</H4></center>
 
 <ul>
-  <li><a href="https://anonfiles.com/h6UbY5S9s2/izhome-latest.tar_xz">IZ* One Homepage Archive (latest) Download</a>
-  <li><a href="https://github.com/HexagonWin/iz-gone">Github Project</a>
-  <li><a href="https://anonfiles.com/ZcDcH7Tas3/official_izone-1273572521741172736_20200618_200525_-1371004580041949188_20210314_164538_-media_zip">IZ* One Twitter Media Contents Download</a>
-  <li><a href="https://www.reddit.com/r/iZone/comments/m4trbk/lets_talk_about_backing_up_the_content/gqw4ok3?utm_source=share&utm_medium=web2x&context=3">Kwiz spreadsheet (Thanks to /u/jetst0rm from the thread above)</a>
+  <li><a href="http://ahs.archve.ga/izwb/">Visit IZ*ONE Archived Homepage @ Github Pages</a>
+  <li><a href="https://anonfiles.com/h6UbY5S9s2/izhome-latest.tar_xz">IZ*ONE Homepage Archive (latest) Download @ Anonfiles</a>
+  <li><a href="https://github.com/HexagonWin/iz-gone">iz-gone Github Project</a>
+  <li><a href="https://anonfiles.com/ZcDcH7Tas3/official_izone-1273572521741172736_20200618_200525_-1371004580041949188_20210314_164538_-media_zip">IZ*ONE Twitter Media Contents Download @ Anonfiles</a>
+  <li><a href="https://www.reddit.com/r/iZone/comments/m4trbk/lets_talk_about_backing_up_the_content/gqw4ok3">Kwiz spreadsheet (Thanks to /u/jetst0rm from the thread above)</a>
   <li><a href="https://docs.google.com/spreadsheets/d/1pLzVvFno4JvV81LhASZpMX28_4eoa8Qu0e2jDDIGTqs/edit#gid=425067522">IZSubs Spreadsheet (Thanks to /u/BestFitLine from the thread above)</a>
-  <li><a href="https://www.reddit.com/r/iZone/comments/m4trbk/lets_talk_about_backing_up_the_content/gqwi17e?utm_source=share&utm_medium=web2x&context=3">A large archive of IZ* One official channel images (Thanks to u/HG1998)</a>
-  <li><p>More coming soon...</p>
+  <li><a href="https://www.reddit.com/r/iZone/comments/m4trbk/lets_talk_about_backing_up_the_content/gqwi17e">A large archive of IZ* One official channel images (Thanks to u/HG1998)</a>
+  <li><p>More coming soon...<br>[22/12/16]As I now have a self hosted server on <a href="http://micros.archve.ga">the WWW</a> I might as well mirror these Anonfiles links later</p>
 </ul>
 
   
 <hr>
-<p>Updated 2022/11/05, 22:12 KST</p>
+<p>Updated 2022/12/16, 15:49 KST</p>
 <p>Maintained by HexagonWin. If you got more datas, please DM me in Reddit u/HexagonWin! I will gladly add it to the list.</p>
+<p>Please mail <a href="mailto:hexagonwin+izwb@disroot.org">hexagonwin+izwb@disroot.org</a></p>
+<p>Please message Telegram:@hexagonwin or Matrix:@hexagonwin:matrix.org
 <p>All datas are owned by IZ* One, MNet, and CJ Entertainment, etc.</p>
 
 </body>
